--- a/news-website/src/main/resources/templates/common/header.html
+++ b/news-website/src/main/resources/templates/common/header.html
@@ -107,151 +107,32 @@ xmlns:sec="http://www.w3.org/1999/xhtml">
           <hr class="divider navbar-divider">
         </div><!-- /.navbar-container container-xl position-relative -->
       </nav><!-- /.navbar navbar__middle navbar-expand navbar-light -->
-      <nav class="navbar navbar__bottom navbar-expand-lg navbar-light" data-toggle="sticky-onscroll">
+      <nav class="navbar navbar__bottom navbar-expand-lg navbar-light">
         <div class="navbar-container container-xl position-relative">
-          <div id="navbarMenuCollapse" class="collapse navbar-collapse">
+          <div class="collapse navbar-collapse">
             <ul class="navbar-nav navbar-nav--left mr-auto w-25 justify-content-start">
-              <li class="nav-item dropdown d-none d-lg-block allow-hover">
-                <a class="nav-link dropdown-toggle text-uppercase myToggleIcon" href="#" id="mainnavDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bars toggle-icon" aria-hidden="true"></i> <i class=
-                "fas fa-times-circle toggle-icon-show" aria-hidden="true"></i></a>
-                <div class="dropdown-menu w-300px" role="menu" aria-labelledby="mainnavDropdown">
-                  <div class="dropdown allow-hover active">
-                    <a class="dropdown-item dropdown-toggle h5 mb-0 active" tabindex="-1" href="home.html" id="homeDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
-                   
-                  </div>
-                  <div class="dropdown allow-hover">
-                    <a class="dropdown-item dropdown-toggle h5 mb-0" tabindex="-1" href="#" id="articleDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Article</a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="articleDropdown">
-                      <li>
-                        <a class="dropdown-item" href="article.html">Article</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="article-no-image.html">Article No Image</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="article-large-image.html">Article Large Hero</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="article-fullwindow-image.html">Article Full Window Image</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="article-top-image.html">Article Top Image</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="article-sidebar.html">Article Sidebar</a>
-                      </li>
-                      <li class="dropdown-divider"></li>
-                      <li>
-                        <a class="dropdown-item" href="index.html">All Article Templates</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="dropdown allow-hover">
-                    <a class="dropdown-item dropdown-toggle h5 mb-0" tabindex="-1" href="#" id="colorschemesVariantDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Colorscheme Variant</a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="colorschemesVariantDropdown">
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/default/home-5.html">Default Home 5 Page Template</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/default-dark/home-5.html">Default Dark Home 5 Page Template</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/default-twotone/home-5.html">Default Twotone Home 5 Page Template</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/default-narrow/home-5.html">Default Narrow Home 5 Page Template</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item active" href="home-5.html">Newspaper Home 5 Page Template</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/newspaper-dark/home-5.html">Newspaper Dark Home 5 Page Template</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/magazine/home-5.html">Magazine Home 5 Page Template</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="dropdown allow-hover">
-                    <a class="dropdown-item dropdown-toggle h5 mb-0" tabindex="-1" href="#" id="allThemesTemplatesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All Themes</a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="allThemesTemplatesDropdown">
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/default/">Default</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/default-dark/">Default Dark</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/default-twotone/">Default Twotone</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/default-narrow/">Default Narrow</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item active" href="index-2.html">Newspaper</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/newspaper-dark/">Newspaper Dark</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/magazine/">Magazine</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="http://html.coolorize.com/magazinize/1.0.0/minimal/">Minimal</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="dropdown allow-hover">
-                    <a class="dropdown-item dropdown-toggle h5 mb-0" tabindex="-1" href="#" id="miscPagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Misc</a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="miscPagesDropdown">
-                      <li>
-                        <a class="dropdown-item" href="posts-by-category.html">Posts by Category</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="posts-by-category-2.html">Posts by Category 2</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="posts-by-category-grid.html">Posts by Category (Grid)</a>
-                      </li>
-                      <li class="dropdown-divider"></li>
-                      <li>
-                        <a class="dropdown-item" href="posts-by-coverage.html">Posts by Coverage/Topic</a>
-                      </li>
-                      <li class="dropdown-divider"></li>
-                      <li>
-                        <a class="dropdown-item" href="page-layout-1.html">Page Layout 1</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="page-layout-2.html">Page Layout 2</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="page-layout-2.html">Page Fullwidth Layout</a>
-                      </li>
-                      <li class="dropdown-divider"></li>
-                      <li>
-                        <a class="dropdown-item" href="search-results.html">Search Result</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="search-results-grid.html">Search Result (Grid)</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="dropdown allow-hover">
-                    <a class="dropdown-item h5 mb-0" href="home-6.html">Next Page</a>
-                  </div>
-                  <div class="dropdown allow-hover">
-                    <a class="dropdown-item h5 mb-0" href="http://html.coolorize.com/magazinize/1.0.0/newspaper-dark/home-5.html">Next Colorscheme</a>
-                  </div>
-                  <div class="dropdown-divider"></div>
-                  <div class="row m-0">
-                    <a class="dropdown-item col-6" href="posts-by-category.html">Featured</a> <a class="dropdown-item col-6" href="posts-by-category.html">Tags or Cats</a> <a class="dropdown-item col-6" href="posts-by-category.html">Such As</a>
-                    <a class="dropdown-item col-6" href="posts-by-category.html">Bussiness</a> <a class="dropdown-item col-6" href="posts-by-category.html">Tech</a> <a class="dropdown-item col-6" href="posts-by-category.html">Review</a> <a class=
-                    "dropdown-item col-6" href="posts-by-category.html">Video</a> <a class="dropdown-item col-6" href="posts-by-category.html">Lifestyle</a> <a class="dropdown-item col-6" href="posts-by-category.html">Music</a> <a class=
-                    "dropdown-item col-6" href="posts-by-category.html">Movie</a> <a class="dropdown-item col-6" href="posts-by-category.html">Gaming</a> <a class="dropdown-item col-6" href="posts-by-category.html">Goes Here</a>
-                    <div class="dropdown-divider col-12"></div><a class="dropdown-item col-12" href="posts-by-category.html">All Topics</a>
-                  </div><!-- /.row -->
-                </div>
-              </li><!-- /.nav-item dropdown d-none d-lg-block -->
+              <!-- Menus Toggle -->
+<li class="nav-item dropdown allow-hover">
+  <a class="nav-link dropdown-toggle" href="#" id="menusDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bars toggle-icon" aria-hidden="true"></i></a>
+  <div class="dropdown-menu" role="menu" aria-labelledby="menusDropdown">
+    
+    <div class="dropdown-container container-xl">
+
+    <span data-th-each="findAllCategory : ${findAllCategoryList}">
+    <a class="dropdown-item col-6" th:href="@{/category?name=}+${findAllCategory.name}" th:text="${findAllCategory.name}"></a>
+   </span>
+
+ 
+
+
+    </div>
+    <!--/.dropdown-container.container-xl-->
+
+  </div>
+  <!--/.dropdown-menu.dropdown-menu-right-->
+</li>
+<!--/.nav-item-->
+<!-- Menus Toggle -->
               <li class="nav-item d-lg-none">
                 <a href="#" class="nav-link" role="button" data-toggle="modal" data-target="#mobileNav"><i class="fas fa-bars" aria-hidden="true"></i></a>
               </li><!-- /.nav-item d-lg-none -->
