--- a/news-website/src/main/resources/templates/login.html
+++ b/news-website/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
 
 <div class="login-heading">
 <span>Login</span>
- <p>Yeniden Hoşgeldiniz</p>
+ <p>Welcome to Haber Ekstra</p>
 </div>
 
 <div th:if="${param.error !=null}" class="alert alert-danger">Incorrect username or password!</div>
