--- a/adminportal/src/main/resources/templates/updateUser.html
+++ b/adminportal/src/main/resources/templates/updateUser.html
@@ -73,7 +73,7 @@
 
 						<div class="col-md-8">
 							<input type="text" name="firstname" class="form-control" id="firstname"
-								th:value="${user.firstname}" required="required" placeholder="Firstname" />
+								th:value="${user.firstname}"  placeholder="Firstname" />
 							<span class="help-block">Firstname of the user</span>
 						</div>
 					</div>
@@ -84,7 +84,7 @@
 
 						<div class="col-md-8">
 							<input type="text" name="lastname" class="form-control" id="lastname"
-								th:value="${user.lastname}" required="required" placeholder="Lastname" />
+								th:value="${user.lastname}"  placeholder="Lastname" />
 							<span class="help-block">Lastname of the user</span>
 						</div>
 					</div>
@@ -98,7 +98,7 @@
 
 						<div class="col-md-8">
 							<input type="text" name="phone" class="form-control" id="phone"
-								th:value="${user.phone}" required="required" placeholder="Phone" />
+								th:value="${user.phone}"  placeholder="Phone" />
 							<span class="help-block">Phone of the user</span>
 						</div>
 					</div>
