Add Comment Management

--- a/adminportal/src/main/resources/templates/common/sidebar.html
+++ b/adminportal/src/main/resources/templates/common/sidebar.html
@@ -148,6 +148,22 @@
                     </div>
                 </div>
             </li>
+            
+            
+              <!-- Nav Item - Comment Collapse Menu -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSix"
+                    aria-expanded="true" aria-controls="collapseSix">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>Comment Management</span>
+                </a>
+                <div id="collapseSix" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        
+                        <a class="collapse-item" th:href="@{/comment/commentList}">View comment list</a>
+                    </div>
+                </div>
+            </li>
 
 
 
