--- a/adminportal/src/main/resources/templates/common/footer-bottom-scripts.html
+++ b/adminportal/src/main/resources/templates/common/footer-bottom-scripts.html
@@ -36,7 +36,8 @@
     <!-- Bootstrap core JavaScript-->
     <script th:src="@{/assets/vendor/jquery/jquery.min.js}"></script>
     <script th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
+    <script th:src="@{/assets/js/scripts.js}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js" integrity="sha512-RdSPYh1WA6BF0RhpisYJVYkOyTzK4HwofJ3Q7ivt/jkpW6Vc8AurL1R+4AUcvn9IwEKAPm/fk7qFZW3OuiUDeg==" crossorigin="anonymous"></script>
     <!-- Core plugin JavaScript-->
     <script th:src="@{/assets/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
