--- a/adminportal/src/main/resources/templates/category/categoryList.html
+++ b/adminportal/src/main/resources/templates/category/categoryList.html
@@ -46,7 +46,12 @@
                                               <td><a th:href="@{/category/categoryInfo(id=${category.id})}" th:text="${category.name}"></a></td>
                                                 <td th:text="${category.active}"></td>
                                                  
-                                                      <td>delete</td>
+                                                    <td>
+                                                      <input hidden="hidden" name="id" th:value="${category.id}" />
+                                                      <button th:id="'deleteOne-'+${category.id}" class="btn btn-danger btn-xs delete-one" type="submit" value="delete">
+                                                      <span class="fa fa-times"></span>
+                                                      Delete</button>
+                                                      </td>
                                            
                                         </tr>
                                     
