--- a/adminportal/src/main/resources/templates/commentList.html
+++ b/adminportal/src/main/resources/templates/commentList.html
@@ -62,7 +62,10 @@
                                                                      <td>
                                                  
                                                      <span><a th:href="@{/comment/updateComment(id=${comment.id})}">edit</a></span> |
-                                                        <span>delete</span> 
+                                                       <input hidden="hidden" name="id" th:value="${comment.id}" />
+                                                      <button th:id="'deleteOne-'+${comment.id}" class="btn btn-transparent btn-xs delete-one" type="submit" value="delete">
+                                                      <span class="fa fa-times"></span>
+                                                      Delete</button>
                                                     </td>
                                            
                                         </tr>
