--- a/adminportal/src/main/resources/templates/common/sidebar.html
+++ b/adminportal/src/main/resources/templates/common/sidebar.html
@@ -111,7 +111,7 @@
                 <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         
-                        <a class="collapse-item" th:href="@{/category/contactList}">View contact list</a>
+                        <a class="collapse-item" th:href="@{/contact/contactList}">View contact list</a>
                     </div>
                 </div>
             </li>
