--- a/adminportal/src/main/resources/templates/common/sidebar.html
+++ b/adminportal/src/main/resources/templates/common/sidebar.html
@@ -145,6 +145,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         
                         <a class="collapse-item" th:href="@{/admin/adminList}">View admin list</a>
+                        <a class="collapse-item" th:href="@{/admin/add}">Add admin</a>
                     </div>
                 </div>
             </li>
