Update admin add and admin update

--- a/adminportal/src/main/resources/templates/addAdmin.html
+++ b/adminportal/src/main/resources/templates/addAdmin.html
@@ -115,6 +115,31 @@
 								active or inactive</span>
 						</div>
 					</div>
+					
+					
+					
+					<!-- adminAuthority -->
+					<div class="form-group">
+						<label class="col-md-2 control-label" for="category">*
+							Admin Authority</label>
+						<div class="col-md-8">
+							<select id="authorityId" name="authorityId"
+								class="form-control">
+								<option value="" selected="selected" disabled="disabled">Please
+									select an option...</option>
+
+                              
+
+								<option value="1">Full Authority</option>
+								<option value="2">News Authority</option>
+								<option value="3">Contact Authority</option>
+								<option value="4">User Authority</option>
+								<option value="5">Comment Authority</option>
+							</select>
+						</div>
+					</div>
+					
+					
 
 
 					<div class="form-group">
