--- a/adminportal/src/main/resources/templates/updateAdmin.html
+++ b/adminportal/src/main/resources/templates/updateAdmin.html
@@ -102,6 +102,27 @@
 							<span class="help-block">Phone of the admin</span>
 						</div>
 					</div>
+					
+					<!-- adminAuthority -->
+					<div class="form-group">
+						<label class="col-md-2 control-label" for="category">*
+							Admin Authority</label>
+						<div class="col-md-8">
+							<select id="authorityId" name="authorityId"
+								class="form-control">
+								<option value="" selected="selected" disabled="disabled">Please
+									select an option...</option>
+
+                              
+
+								<option th:selected="(${adminUser.authorityId}=='1')" value="1">Full Authority</option>
+								<option th:selected="(${adminUser.authorityId}=='2')" value="2">News Authority</option>
+								<option th:selected="(${adminUser.authorityId}=='3')" value="3">Contact Authority</option>
+								<option th:selected="(${adminUser.authorityId}=='4')" value="4">User Authority</option>
+								<option th:selected="(${adminUser.authorityId}=='5')" value="5">Comment Authority</option>
+							</select>
+						</div>
+					</div>
 
 				
 					
