Change Admin Password

--- a/adminportal/src/main/resources/templates/common/header.html
+++ b/adminportal/src/main/resources/templates/common/header.html
@@ -77,6 +77,13 @@
                                 </a>
                                
                                 <div class="dropdown-divider"></div>
+                                  <a class="dropdown-item" th:href="@{/admin/changePassword}">
+                                    <i class="fas fa-lock fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Change Password
+                                </a>
+                                
+                                  <div class="dropdown-divider"></div>
+                                
                                 <a class="dropdown-item"  data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Logout
